[gd_scene load_steps=4 format=3 uid="uid://pkxplrmrqple"]

[ext_resource type="Script" path="res://teller/god_ui.gd" id="1_gvxnr"]
[ext_resource type="PackedScene" uid="uid://dxqvtd2hkyqp4" path="res://ui/list_display.tscn" id="2_1sneo"]
[ext_resource type="Script" path="res://addons/object-inspector/scripts/inspector.gd" id="2_mkq2b"]

[node name="GodUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvxnr")

[node name="ChatsLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1001.0
offset_top = 7.0
offset_right = 1053.0
offset_bottom = 30.0
text = "Conversations"

[node name="Chats" parent="." instance=ExtResource("2_1sneo")]
visible = false
layout_mode = 1
offset_left = 1001.0
offset_top = 40.0
offset_bottom = -444.0

[node name="HerosLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 55.0
offset_bottom = 26.0
text = "Heros"

[node name="Heros" parent="." instance=ExtResource("2_1sneo")]
layout_mode = 1
offset_left = 3.0
offset_top = 28.0
offset_right = -978.0
offset_bottom = -461.0

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 408.0
offset_right = 168.0
offset_bottom = 647.0

[node name="Character" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
text = "Character"

[node name="SpawnObject" type="Button" parent="Buttons"]
layout_mode = 2
text = "Spawn Object"

[node name="Control" type="Button" parent="Buttons"]
layout_mode = 2
text = "Assume Direct Control"

[node name="Save" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
text = "Save"

[node name="AddEffect" type="Button" parent="Buttons"]
layout_mode = 2
text = "Add Effect"

[node name="Inventory" type="Button" parent="Buttons"]
layout_mode = 2
text = "Inventory"

[node name="Remove" type="Button" parent="Buttons"]
layout_mode = 2
text = "Remove"

[node name="Teleport" type="Button" parent="Buttons"]
layout_mode = 2
text = "Teleport"

[node name="RightHandPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 822.0
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 380.0

[node name="Inspectors" type="VBoxContainer" parent="RightHandPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 32.0
offset_right = 328.0
offset_bottom = 377.0

[node name="ObjectInspector" type="VBoxContainer" parent="RightHandPanel/Inspectors"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
theme_type_variation = &"Inspector"
script = ExtResource("2_mkq2b")
_search_enabled = false

[node name="InspectorLabel" type="Label" parent="RightHandPanel"]
layout_mode = 0
offset_right = 329.0
offset_bottom = 23.0

[connection signal="pressed" from="Buttons/Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="Buttons/SpawnObject" to="." method="_on_spawn_object_pressed"]
[connection signal="pressed" from="Buttons/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="_on_test_pressed"]
[connection signal="pressed" from="Buttons/AddEffect" to="." method="_on_add_effect_pressed"]
[connection signal="pressed" from="Buttons/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Buttons/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="Buttons/Teleport" to="." method="_on_teleport_pressed"]
[connection signal="mouse_entered" from="RightHandPanel/Inspectors" to="." method="_on_ui_mouse_entered"]
[connection signal="mouse_exited" from="RightHandPanel/Inspectors" to="." method="_on_ui_mouse_exited"]
